crates/ruau/tests/compile/internal_state_private.rs
fn main() {
    let _ = std::mem::size_of::<ruau::state::RawLuau>();
    let _ = std::mem::size_of::<ruau::state::ExtraData>();
}
